# dusata_2024

./: .env  package-lock.json  package.json  pyproject.toml
app/: create_models.py  crud.py  database.py  dependencies.py  main.py  models.py  schemas.py  settings.py
app/routers/: alerm.py  auth.py  matching.py
src/: App.js
src/components/: MatchDetailScreen.css  MatchDetailScreen.js  MatchScreen.css  MatchScreen.js  StartScreen.css  StartScreen.js  SurveyContext.js  SurveyFace.css  SurveyFace.js  SurveyFinal.js  SurveyGender.css  SurveyGender.js  SurveyInterest.css  SurveyInterest.js  SurveyIntro.css  SurveyIntro.js  SurveyKakaoID.css  SurveyKakaoID.js  SurveyLogin.css  SurveyLogin.js  SurveyMBTI.css  SurveyMBTI.js  SurveyName.css  SurveyName.js  SurveySmoking.css  SurveySmoking.js  SurveyStudentInfo.css  SurveyStudentInfo.js  abc.txt
