[tool.poetry]
name = "sms"
version = "0.1.0"
description = ""
authors = ["Jaehyeon <syukjh0314@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
requests = "^2.31.0"
configparser = "^7.0.0"
coolsms-python-sdk = "^2.0.3"
uvicorn = "^0.29.0"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
databases = "^0.9.0"
aiosqlite = "^0.20.0"
python-dotenv = "^1.0.1"
mysqlclient = "^2.2.4"
aiomysql = "^0.2.0"
greenlet = "^3.0.3"
pytz = "^2024.1"
cryptography = "^42.0.7"
jwt = "^1.3.1"
python-jose = "^3.3.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
